--- a/src/componentes/cart.css
+++ b/src/componentes/cart.css
@@ -1,34 +1,32 @@
 main{
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    box-sizing: border-box;
-    height: 100%;
+    align-items: center;
+    padding: 2rem;
     background-color: white;
     color: black;
-    flex-grow: 1;
+    min-height: calc(85vh - 50px); 
 }
 
 .listaPizzas{
     display: flex;
     flex-direction: column;
+    margin-top: 7vh;
+    margin-bottom: 7vh;
     gap: 1rem;
-    width: fit-content;
+    width: 520px;
 }
 
 .itemPizza{
     display: flex;
-    flex-direction: row;
-    justify-content: start;
     align-items: center;
-    height: 4rem;
-    width: 480px;
-    gap: 1.5rem;
+    gap: 1rem;
+    padding: 0.75rem;
+    border-bottom: 1px solid #ddd;
 }
 
 .itemPizza h4{
-    text-wrap-mode: nowrap;
+    white-space: nowrap;
 }
 
 .imgPizzaContainer{
@@ -46,6 +44,13 @@ main{
     display: flex;
     justify-content: space-between;
     flex-grow: 1;
+    font-weight: 600;
+}
+
+.detallePizza h4 {
+    margin: 0;
+    font-size: 1rem;
+    text-transform: capitalize;
 }
 
 .botones{
@@ -60,7 +65,7 @@ main{
     box-sizing: border-box;
     color: blue;
     border: 1px solid blue;
-    height: 40px;
+    height: 30px;
     width: 40px;
     line-height: 0;
 }
@@ -69,7 +74,16 @@ main{
     box-sizing: border-box;
     color: red;
     border: 1px solid red;
-    height: 40px;
+    height: 30px;
     width: 40px;
     line-height: 0;
+}
+
+.btnpago{
+    box-sizing: border-box;
+    color: rgb(212, 67, 0);
+    border: 2px solid rgb(212, 67, 0);
+    height: 40px;
+    width: 90px;
+    border-radius: 10px;
 }
